--- a/pages/index.html
+++ b/pages/index.html
@@ -24,10 +24,10 @@
 
 <body class="body font-[Poppins] text-sm box-border">
      <div class="scroll_smoother mx-auto">
-          <header class="max-w-screen-2xl mx-auto">
+          <header class="max-w-screen-xl mx-auto">
                <nav id="navbar"
-                    class="navbar absolute top-0 flex items-center justify-between gap-[20px] h-[20%] transition duration-300 pl-5 pr-5 sm:pl-10 sm:pr-10 md:pl-[6%] md:pr-[6%] 2xl:pl-20 2xl:pr-20  z-50 bg-opacity-50 w-full max-w-screen-2xl mx-auto">
-                    <div class="flex justify-between items-center gap-32 max-w-screen-2xl">
+                    class="navbar absolute top-0 flex items-center justify-between gap-[20px] h-[20%] transition duration-300 pl-5 pr-5 sm:pl-10 sm:pr-10 md:pl-[6%] md:pr-[6%] 2xl:pl-20 2xl:pr-20  z-50 bg-opacity-50 w-full max-w-screen-xl mx-auto">
+                    <div class="flex justify-between items-center gap-32 max-w-screen-xl">
                          <div class="logo_animation ">
                               <div class="header_logo flex gap-2 justify-center items-center relative">
                                    <img class="w-[100px]" src="../assets/images/brand/logo.png" alt="">
@@ -80,11 +80,12 @@
                               <div
                                    class="circle-bg bg-[#4D62CE] w-[564px] h-[564px] rounded-full absolute -bottom-60 left-8">
                               </div>
-                              <div class="bg-blur h-screen">
-                                   <div class="noice-bg h-screen  overflow-hidden">
-                                        <div class="wrapper-main flex pt-[8%] pl-20 pr-20 max-w-screen-2xl m-auto">
-                                             <div class="flex flex-col gap-6 w-1/2 my-auto h-screen">
-                                                  <div
+                              <div class="bg-blur h-full">
+                                   <div class="noice-bg h-full  overflow-hidden">
+                                        <div
+                                             class="wrapper-main flex pt-[8%] pl-20 pr-20 max-w-screen-xl m-auto h-full">
+                                             <div class="flex flex-col w-1/2 justify-between mb-5">
+                                                  <div 
                                                        class="hero-tittle capitalize text-white text-6xl font-extrabold">
                                                        <span class="whitespace-pre-line">a place
                                                             every student
@@ -116,13 +117,22 @@
                                                   <div class="flex flex-col gap-4">
                                                        <span class="text-white opacity-50">Featured By</span>
                                                        <div class="flex gap-3">
-                                                            <img class="w-52" src="../assets/images/featured2.png" alt="">
-                                                            <img class="w-52" src="../assets/images/featured1.png" alt="">
+                                                            <img class="w-52" src="../assets/images/featured2.png"
+                                                                 alt="">
+                                                            <img class="w-52" src="../assets/images/featured1.png"
+                                                                 alt="">
                                                        </div>
                                                   </div>
                                              </div>
-                                             <div class="flex w-1/2">
-
+                                             <div class="w-1/2 relative">
+                                                  <!-- <div class="bg_image bottom-[10%]"> -->
+                                                       <img class="max-h-full max-w-full w-[80%] 2xl:w-full block absolute right-[5%] 2xl:right-0 bottom-[10%]" src="../assets/images/bgstudent.png"
+                                                            alt="">
+                                                  <!-- </div> -->
+                                                  <div class="bg_student bottom-0 mx-auto">
+                                                       <img class="max-h-full block absolute bottom-0 left-[50%] -translate-x-[30%]" src="../assets/images/student.png"
+                                                            alt="">
+                                                  </div>
                                              </div>
                                         </div>
                                    </div>
