add favicon and image change

--- a/pages/index.html
+++ b/pages/index.html
@@ -127,20 +127,20 @@
                                                   </div>
                                              </div>
                                              <div class="w-1/2 relative">
-                                                  <div class="bg_image">
+                                                  <!-- <div class="bg_image">
                                                        <img class="max-h-full max-w-full w-[80%] 2xl:w-full block absolute right-[5%] 2xl:right-0 bottom-[10%]"
                                                             src="../assets/images/bgstudent.png" alt="">
-                                                  </div>
+                                                  </div> -->
                                                   <div class="bg_student">
                                                        <img class="max-h-full max-w-full block absolute bottom-0 left-[50%] -translate-x-[38%]"
-                                                            src="../assets/images/student.png" alt="">
+                                                            src="../assets/images/student.webp" alt="">
                                                   </div>
                                                   <div class="other_particles">
                                                        <img class="absolute -left-[35%] w-16"
                                                             src="../assets/images/bell.png" alt="">
-                                                       <img class="absolute left-[20%] w-14 bottom-[85%]"
+                                                       <img class="absolute left-[20%] w-14 bottom-[80%]"
                                                             src="../assets/images/Ellipse.png" alt="">
-                                                       <img class="absolute right-0 w-20 bottom-[90%]"
+                                                       <img class="absolute right-0 w-20 bottom-[80%]"
                                                             src="../assets/images/robo.png" alt="">
                                                        <img class="absolute bottom-[20%] -right-[2%] w-20"
                                                             src="../assets/images/saturn.png" alt="">
